# gemini-watermark-and-synthid-remover

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE-AI.md  LICENSE-THIRD-PARTY.md  README.md  vcpkg.json
.github/workflows/: release.yml
assets/: embedded_assets.hpp  model_core.id.h
cmake/: FindFFMPEG.cmake
docs/superpowers/plans/: 2026-05-28-phase2-detection-inpaint.md  2026-05-28-phase2-detection-inpaint.md.tasks.json  2026-06-28-fdncnn-ai-denoise.md
docs/superpowers/specs/: 2026-05-28-phase1-visible-watermark-design.md  2026-06-28-fdncnn-ai-denoise-design.md
reference-images/codebook/: synthid_codebook_meta.json
scripts/: build.sh  bundle_macos_vulkan.sh  convert_npz_to_wcb.py  sign_and_notarize_macos.sh  wmr.entitlements
src/: main.cpp
src/cli/: batch_processor.cpp  cli_app.cpp  cli_app.hpp
src/core/: ai_denoise.cpp  blend_modes.cpp  blend_modes.hpp  fft_context.cpp  fft_context.hpp  inpaint.cpp  inpaint.hpp  lama_inpainter.cpp  types.hpp  watermark_engine.cpp  watermark_engine.hpp
src/detection/: ncc_detector.cpp  ncc_detector.hpp  synthid_detector.cpp  synthid_detector.hpp
src/synthid/: codebook_builder.cpp  codebook_builder.hpp  codebook_subtractor.cpp
src/video/: notebooklm_detector.cpp  notebooklm_gates.cpp  notebooklm_gates.hpp  video_processor.cpp  video_processor.hpp  video_writer.cpp  video_writer.hpp
tests/unit/: ai_denoise_test.cpp  fft_context_test.cpp  notebooklm_gates_test.cpp
wmr-windows-x86_64/: migan_pipeline_v2.onnx
